// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Meta /> should match snapshot with label, icon for Primary variant 1`] = `
<span
  class="reset_inlineText__6swfds2 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y44 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq4"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
  >
    <i
      class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q60 Meta_variant_primary__1f570jc0"
      role="presentation"
    >
      <svg
        class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
        />
      </svg>
    </i>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06eh useBoxStyles_textAlign_left__7o6k06em useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      Hello World!
    </span>
  </div>
</span>
`;

exports[`<Meta /> should match snapshot with label, icon for Secondary variant 1`] = `
<span
  class="reset_inlineText__6swfds2 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y44 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq4"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
  >
    <i
      class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q60 Meta_variant_secondary__1f570jc1"
      role="presentation"
    >
      <svg
        class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
        />
      </svg>
    </i>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
  >
    <span
      class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06eh useBoxStyles_textAlign_left__7o6k06em useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
    >
      Hello World!
    </span>
  </div>
</span>
`;
